unpackaged/main/default/objects/User__c/User__c.object-meta.xml
<CustomObject>
    <description>Application users.</description>
    <label>User</label>
    <nameField>
        <displayFormat>U-{000000000}</displayFormat>
        <label>User Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>