unpackaged/main/default/objects/User__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines if the user is currently active.</description>
    <inlineHelpText>Defines if the user is currently active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>