unpackaged/main/default/objects/User__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Currency of the price range of the provider.</description>
    <inlineHelpText>Currency of the price range of the provider.</inlineHelpText>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MXN</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>BTC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>