unpackaged/main/default/objects/User__c/fields/MaximumPrice__c.field-meta.xml
<CustomField>
    <fullName>MaximumPrice__c</fullName>
    <description>Maximum price of the products or services offered by the provider.</description>
    <inlineHelpText>Maximum price of the products or services offered by the provider.</inlineHelpText>
    <label>Maximum Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>