unpackaged/main/default/objects/User__c/fields/MinimumPrice__c.field-meta.xml
<CustomField>
    <fullName>MinimumPrice__c</fullName>
    <description>Minimum price of the products or services offered by the provider.</description>
    <inlineHelpText>Minimum price of the products or services offered by the provider.</inlineHelpText>
    <label>Minimum Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>