unpackaged/main/default/objects/User__c/fields/NegativeReviews__c.field-meta.xml
<CustomField>
    <fullName>NegativeReviews__c</fullName>
    <description>Negative reviews received by the user.</description>
    <inlineHelpText>Negative reviews received by the user.</inlineHelpText>
    <label>Negative Reviews</label>
    <summaryFilterItems>
        <field>Review__c.Positive__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Review__c.UserReviewed__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>