unpackaged/main/default/objects/User__c/fields/PositiveReviews__c.field-meta.xml
<CustomField>
    <fullName>PositiveReviews__c</fullName>
    <description>Positive reviews received by the user.</description>
    <inlineHelpText>Positive reviews received by the user.</inlineHelpText>
    <label>Positive Reviews</label>
    <summaryFilterItems>
        <field>Review__c.Positive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Review__c.UserReviewed__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>