unpackaged/main/default/objects/User__c/fields/ProviderStatus__c.field-meta.xml
<CustomField>
    <fullName>ProviderStatus__c</fullName>
    <description>Defines if the Provider is active or not, to receive clients.</description>
    <inlineHelpText>Defines if the Provider is active or not, to receive clients.</inlineHelpText>
    <label>Provider Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>