unpackaged/main/default/objects/User__c/fields/PublicName__c.field-meta.xml
<CustomField>
    <fullName>PublicName__c</fullName>
    <description>Public Name of the user.</description>
    <externalId>true</externalId>
    <inlineHelpText>Public Name of the user.</inlineHelpText>
    <label>Public Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>