unpackaged/main/default/objects/User__c/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <description>User ranking.</description>
    <formula>ROUND((PositiveReviews__c * 5) / (PositiveReviews__c + NegativeReviews__c), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>User ranking.</inlineHelpText>
    <label>Ranking</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>